tests/NormalTests/paczka1/fuzzy1/96376540.err
Error in line 4: ZAjinq4Ph S825 15,6
Error in line 24: NJO A607 46,9
Error in line 30: 2Fgnw5SP S379 1,2
Error in line 29: kh4IFNj A607 99,9
Error in line 36: 2Fgnw5SP A607 44,2
